explain the current situation

--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -324,10 +324,14 @@ Andrew Neitzke \\
 \tb{Preliminary} and \tb{incomplete} draft
 \end{center}
 
-{These are the notes for a Fall 2017
-course at UT Austin, \ti{in progress}.
-They are extremely incomplete, unreliable, full
+{These are partial notes for a Fall 2017
+course at UT Austin. They are extremely incomplete, unreliable, full
 of mistakes and omissions.
+Moreover, the course is now complete, but 
+partway through the semester I had to stop updating the notes.
+I hope to return to them, no later than the next time I teach
+the course.
+
 The latest PDF can always be found
 at
 \begin{center}
@@ -344,12 +348,6 @@ or as pull requests to the source repository hosted at
 I thank Arun Debray, Behzat Ergun, Richard Hughes, Robbie Rosati 
 and Ivan Tulli for very helpful
 suggestions and corrections.
-
-You can join a Slack channel for the course (needs {\tt {@math.utexas.edu}} address)
-at
-\begin{center}
-\small \url{https://join.slack.com/t/qft-geometry/signup} 
-\end{center}
 }
 
 % \tableofcontents
