--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -335,14 +335,13 @@ partway through the semester I had to stop updating the notes.
 I hope to return to them, no later than the next time I teach
 the course.
 
-The latest PDF can always be found
-at
+The latest PDF be found at
 \begin{center}
-\small \url{http://ma.utexas.edu/users/neitzke/teaching/392C-qft-geometry/qft-geometry.pdf}
+\small \url{https://gauss.math.yale.edu/~an592/exports/qft-geometry.pdf}
 \end{center}
 Please send corrections/improvements to
 \begin{center}
-\small \tt\href{mailto:neitzke@math.utexas.edu}{neitzke@math.utexas.edu}
+\small \tt\href{mailto:andrew.neitzke@yale.edu}{andrew.neitzke@yale.edu}
 \end{center}
 or as pull requests to the source repository hosted at
 \begin{center}
