update build system

--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -331,14 +331,10 @@ Andrew Neitzke \\
 course at UT Austin. They are extremely incomplete, unreliable, full
 of mistakes and omissions.
 Moreover, the course is now complete, but 
-partway through the semester I had to stop updating the notes.
+partway through the semester I stopped updating the typed notes.
 I hope to return to them, no later than the next time I teach
 the course.
 
-The latest PDF be found at
-\begin{center}
-\small \url{https://gauss.math.yale.edu/~an592/exports/qft-geometry.pdf}
-\end{center}
 Please send corrections/improvements to
 \begin{center}
 \small \tt\href{mailto:andrew.neitzke@yale.edu}{andrew.neitzke@yale.edu}
